--- a/index.html
+++ b/index.html
@@ -76,6 +76,44 @@
             </div>
         </nav>
     </header>
+    <section id="shop-gallery" style="max-width: 1200px; margin: 40px auto; padding: 0 20px;">
+    <h2 style="text-align: center; color: var(--primary-color); margin-bottom: 30px;" 
+        data-zh="店面環境" data-en="Our Environment">
+        店面環境
+    </h2>
+    
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px;">
+        
+        <div style="background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.08);">
+            <img src="images/shop_front.jpg" alt="Exterior" style="width: 100%; height: 220px; object-fit: cover; display: block;">
+            <div style="padding: 12px; text-align: center; color: #555; font-size: 0.95rem;">
+                <span data-zh="✨ 店面外觀" data-en="✨ Exterior">✨ 店面外觀</span>
+            </div>
+        </div>
+
+        <div style="background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.08);">
+            <img src="images/massage_area.jpg" alt="Massage" style="width: 100%; height: 220px; object-fit: cover; display: block;">
+            <div style="padding: 12px; text-align: center; color: #555; font-size: 0.95rem;">
+                <span data-zh="🕯️ 專業按摩區" data-en="🕯️ Massage Area">🕯️ 專業按摩區</span>
+            </div>
+        </div>
+
+        <div style="background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.08);">
+            <img src="images/hair_washing.jpg" alt="Hair Wash" style="width: 100%; height: 220px; object-fit: cover; display: block;">
+            <div style="padding: 12px; text-align: center; color: #555; font-size: 0.95rem;">
+                <span data-zh="💆 越式洗頭" data-en="💆 Hair Washing">💆 越式洗頭</span>
+            </div>
+        </div>
+
+        <div style="background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.08);">
+            <img src="images/beauty.jpg" alt="Beauty" style="width: 100%; height: 220px; object-fit: cover; display: block;">
+            <div style="padding: 12px; text-align: center; color: #555; font-size: 0.95rem;">
+                <span data-zh="💅 美容護理" data-en="💅 Beauty Service">💅 美容護理</span>
+            </div>
+        </div>
+
+    </div>
+</section>
     <div id="live-promo-bar" class="live-promo">
         📢 <span id="promo-text-content">歡迎光臨 Tamarind Spa</span>
     </div>
